# ThreePhase

./: .gitignore  MAINTENANCE_CHECKLIST.md  README.md  ThreePhase-main.7z  ThreePhase_entier (2).7z  ThreePhase_entier.7z  config_qt5.py  context.md  main_qt5.py  models_qt5.py  physics_qt5.py  repomix-output-Xizhi-huo-ThreePhase.git.xml  test.py  ui_nodes.py  ui_plots_qt5.py  ui_qt5.py  ui_widgets_qt5.py
.claude/: settings.json
ThreePhase_entier/: README.md  context.md
ThreePhase_entier/.claude/: settings.json
ThreePhase_entier/app/: main.py
ThreePhase_entier/domain/: constants.py  fault_scenarios.py  node_map.py
ThreePhase_entier/ui/: main_window.py  (+2 more)
adapters/: render_state.py
app/: main.py
demos/ui_compare/react_tauri_demo/src-tauri/: Cargo.toml
docs/: mixin_dependency_map.md
domain/: assessment.py  constants.py  enums.py  fault_scenarios.py  models.py  test_states.py
scripts/: report_large_files.py
services/: _physics_arbitration.py  _physics_core.py  _physics_measurement.py  _physics_protection.py  assessment_coordinator.py  assessment_service.py  blackbox_repair_handler.py  fault_manager.py  flow_mode_manager.py  hardware_actions.py  loop_test_service.py  phase_order_resolver.py  physics_engine.py  pt_exam_service.py  pt_phase_check_service.py  pt_voltage_check_service.py  sync_test_service.py
tests/: test_assessment_snapshot.py  test_physics_snapshot.py  test_scoring_blackbox_efficiency.py  test_scoring_discipline.py  test_scoring_fault_diagnosis.py  test_scoring_step_quality.py
ui/: __init__.py  main_window.py  styles.py  test_panel.py
(+79 files in other folders)
