[package]
name = "three_phase_react_tauri_demo"
version = "0.1.0"
description = "Minimal React + Tauri demo UI"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1" }

[dependencies]
tauri = { version = "2.0.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
